# rag-property-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: __init__.py  config.py  dependencies.py  main.py
config/: __init__.py  settings.py
docs/: 00-project-overview.md  01-master-roadmap.md  02-mvp-implementation-plan.md  03-api-specification.md  08-chromadb-ingestion-guide.md  09-improvement-roadmap.md  10-agents-and-tools-guide.md  11-tool-selection-optimization.md  14-alternative-methods-analysis.md  15-embedding-optimization-report.md  16-search-strategy.md  18-evaluation-v2-confusion-matrix.md  19-smart-location-search-plan.md  20-thesis-improvement-plan.md  21-thesis-rewriting-prompts.md  22-thesis-draft-sections.md  23-productionize-deployment-guide.md  prompts-generate-knowledge.md  references-master.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
gold-analysis/: analisis-emas-29-jan-2026.md  strategi-investasi-emas-2026.html
scripts/: analyze_metrics.py  chat.py  chat_api_only.py  chat_chromadb_only.py  compare_models.py  debug_chromadb.py  evaluate_v2.py  export_metrics.py  generate_figure4.py  generate_thesis_metrics_report.py  ingest_knowledge.py  run_evaluation.py  scheduler.py  sync_properties.py  test_api_connection.py  test_chromadb_effectiveness.py  test_hybrid_search.py  test_metrics.py  test_property_search.py  test_react_agent.py
src/: __init__.py
tests/: evaluation.py  test_coach_agent.py  test_property_agent.py
thesis/: BAB_I.docx  BAB_I.html  BAB_I.md  BAB_II.html  BAB_II.md  BAB_III.html  BAB_III.md  BAB_IV.html  BAB_IV.md  BAB_I_humanized.docx  BAB_I_humanized.md  BAB_I_humanized_v2.docx  BAB_V.html  BAB_V.md  CLAUDE.md  REFERENCES.md  (+5 more)
(+118 files in other folders)
